--- a/main.html
+++ b/main.html
@@ -4,6 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+  .box {
+    width: 300px;
+    background-color: lightblue;
+    border: 15px solid blue;
+    padding: 50px;
+    margin: 20px;
+  }
+</style>
 </head>
 
 <body>
@@ -11,12 +20,8 @@
     <script type="text/javascript" src="./script.js">
 	</script>
 
-	<div style="width: 300px;
-	background-color: lightblue;
-	border: 15px solid blue;
-	padding: 50px;
-	margin: 20px;">
-		<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+	<div class="box">
+		  This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
 	</div>
 
 </body>
